--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>python-telegram-bot Example WebApp</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style type="text/css">
+        .item {
+            width: 40vw;
+            height: 40vw;
+            background-color: lightskyblue;
+            margin: 5vw;
+            display: flex;
+        }
+    </style>
 </head>
 <script type="text/javascript">
     Telegram.WebApp.ready();
