--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
 </body>
 <script type="text/javascript">
     Telegram.WebApp.expand();
