--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     });
 </script>
 <body style="background-color: #ffffff">
-    <div class="item">0</div>
+    <div class="item">
+        <a href="https://google.com">google</a>
+    </div>
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
