--- a/index.html
+++ b/index.html
@@ -4,35 +4,17 @@
     <meta charset="UTF-8">
     <title>python-telegram-bot Example WebApp</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <style type="text/css">
-        .item {
-            width: 40vw;
-            height: 40vw;
-            background-color: lightskyblue;
-            margin: 5vw;
-            display: flex;
-        }
-    </style>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" ></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<script type="text/javascript">
-    Telegram.WebApp.ready();
-    Telegram.WebApp.MainButton.setText('Choose item').show().onClick(function () {
-        const data = 'some item number';
-        Telegram.WebApp.sendData(data);
-        Telegram.WebApp.close();
-    });
-</script>
-<body style="background-color: #ffffff">
-    <div class="item">
-        <a href="https://google.com">google</a>
-    </div>
+<body>
+    <div class="item">0</div>
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
     <div class="item">4</div>
     <div class="item">5</div>
 </body>
-<script type="text/javascript">
-    Telegram.WebApp.expand();
-</script>
+
+    <script src="script.js"></script>
 </html>
