--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="p-10 text-4xl font-montserrat relative bg-[url('img/back.jpg')]">
+<body class="p-10 text-xl w-full font-montserrat relative bg-[url('img/back.jpg')]">
 
     <div class="space-y-6 items-center flex flex-col"> <!--section-->
 
          <!--title-->
-        <h3 class="text-5xl w-min text-center bg-white rounded-3xl border-8 border-amber-400 p-6">
+        <h3 class="text-lg w-min text-center bg-white rounded-3xl border-8 border-amber-400 p-6">
             Title&nbsp;of&nbsp;section
         </h3>
 
