--- a/index.html
+++ b/index.html
@@ -2,32 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>python-telegram-bot Example WebApp</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="p-10 text-xl w-full font-montserrat relative bg-[url('img/back.jpg')]">
+<body class="py-6 px-3 w-full font-montserrat relative bg-[url('img/back.jpg')]">
 
-    <div class="space-y-6 items-center flex flex-col"> <!--section-->
+    <div class="space-y-2 items-center flex flex-col"> <!--section-->
 
          <!--title-->
-        <h3 class="text-lg w-min text-center bg-white rounded-3xl border-8 border-amber-400 p-6">
+        <h3 class="text-lg w-min text-center bg-white rounded-xl border-4 border-amber-400 p-3 px-4">
             Title&nbsp;of&nbsp;section
         </h3>
 
 
         <!--item-->
-        <div tabindex="0" class="collapse bg-white shadow-lg rounded-lg p-6">
+        <div tabindex="0" class="collapse bg-white shadow-lg rounded-lg">
             <!--item-title-->
-            <div class="collapse-title flex flex-row items-center space-x-5">
-                <span class="h-min grow pb-1">Чат&nbsp;боты</span>
-                <div class="rounded-full bg-yellow-500 px-6 pt-1 pb-2">review</div>
+            <div class="collapse-title flex flex-row items-center px-4 ">
+                <span class="h-min grow">Чат&nbsp;боты</span>
+                <div class="rounded-full bg-yellow-500 px-3 py-1">review</div>
             </div>
             <!--item-content-->
             <div class="collapse-content">
-                <p class="pt-4 font-nato">tabindex="0" attribute is necessary to make the div focusable
+                <p class="pt-1 font-nato text-justify">tabindex="0" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable</p>
@@ -35,29 +36,17 @@
         </div>
 
         <!--item-->
-        <div tabindex="0" class="collapse bg-white shadow-lg rounded-lg p-6">
+        <div tabindex="0" class="collapse bg-white shadow-lg rounded-lg">
             <!--item-title-->
-            <div class="collapse-title flex flex-row items-center space-x-5">
-                <span class="h-min grow pb-1">Боты&nbsp;как&nbsp;пользователи</span>
-                <div class="rounded-full bg-yellow-500 px-6 pt-1 pb-2">review</div>
+            <div class="collapse-title flex flex-row items-center px-4 ">
+                <span class="h-min grow">Чат&nbsp;боты</span>
+                <div class="rounded-full bg-yellow-500 px-3 py-1">review</div>
             </div>
             <!--item-content-->
             <div class="collapse-content">
-                <p class="pt-4">tabindex="0" attribute is necessary to make the div focusable
-                tabindex="0" attribute is necessary to make the div focusable</p>
-            </div>
-        </div>
-
-        <!--item-->
-        <div tabindex="0" class="collapse bg-white shadow-lg rounded-lg p-6">
-            <!--item-title-->
-            <div class="collapse-title flex flex-row items-center space-x-5">
-                <span class="h-min grow pb-1">Боты&nbsp;с&nbsp;Web&nbsp;Application</span>
-                <div class="rounded-full bg-yellow-500 px-6 pt-1 pb-2">review</div>
-            </div>
-            <!--item-content-->
-            <div class="collapse-content">
-                <p class="pt-4">tabindex="0" attribute is necessary to make the div focusable
+                <p class="pt-1 font-nato text-justify">tabindex="0" attribute is necessary to make the div focusable
+                tabindex="0" attribute is necessary to make the div focusable
+                tabindex="0" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable</p>
             </div>
         </div>
