--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!--item-content-->
             <div class="collapse-content">
                 <p class="pt-1 font-nato text-justify">tabindex="0" attribute is necessary to make the div focusable
-                tabindex="0" attribute is necessary to make the div focusable
+                tabindex="" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable</p>
             </div>
