--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="tg_light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="py-6 px-3 w-full font-montserrat relative bg-[url('img/back.jpg')]">
+<body class="py-6 px-3 w-full bg-cover font-montserrat relative bg-[url('img/back.svg')]">
 
     <div class="space-y-2 items-center flex flex-col"> <!--section-->
 
          <!--title-->
-        <h3 class="text-lg w-min text-center bg-white rounded-xl border-4 border-amber-400 p-3 px-4">
+        <h3 class="text-lg w-min text-center bg-white rounded-xl border-2 border-secondary p-3 px-4">
             Title&nbsp;of&nbsp;section
         </h3>
 
@@ -24,12 +24,12 @@
             <!--item-title-->
             <div class="collapse-title flex flex-row items-center px-4 ">
                 <span class="h-min grow">Чат&nbsp;боты</span>
-                <div class="rounded-full bg-yellow-500 px-3 py-1">review</div>
+                <div class="rounded-full bg-primary px-3 py-1">review</div>
             </div>
             <!--item-content-->
             <div class="collapse-content">
                 <p class="pt-1 font-nato text-justify">tabindex="0" attribute is necessary to make the div focusable
-                tabindex="" attribute is necessary to make the div focusable
+                tabindex="0" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable
                 tabindex="0" attribute is necessary to make the div focusable</p>
             </div>
@@ -40,7 +40,7 @@
             <!--item-title-->
             <div class="collapse-title flex flex-row items-center px-4 ">
                 <span class="h-min grow">Чат&nbsp;боты</span>
-                <div class="rounded-full bg-yellow-500 px-3 py-1">review</div>
+                <div class="rounded-full bg-primary px-3 py-1">review</div>
             </div>
             <!--item-content-->
             <div class="collapse-content">
